# repartition_formations_cc_optimisation_rhone_alpes_INSEE_DR_SES

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config_ear2027.yaml  schema.yaml
docs/: 00_vue_ensemble.md  01_donnees_entree.md  02_modelisation_mathematique.md  03_configuration_yaml.md  04_resolution_et_assouplissements.md  05_validation_solution.md  06_format_exports.md  07_visualisation_cartographique.md  08_preparation_donnees.md  09_modelisation_algorithmique_complete.md  09_modelisation_algorithmique_complete.tex  10_contexte_llm.md  10_resume_passation_ia.md  11_surcouche_metier_post_optimisation.md  12_execution_guidee.md  rapport_technique_complet.tex
tests/: conftest.py  test_cli.py  test_cli_export.py  test_cli_map.py  test_cli_prepare_data.py  test_cli_relaxation.py  test_config.py  test_data_loading.py  test_data_preparation.py  test_diagnostics.py  test_end_to_end_small_instance.py  test_export.py  test_guided_run.py  test_map_export.py  test_model_builder_smoke.py  test_parameters.py  test_postprocess.py  test_relaxation.py  test_report_generation.py  (+3 more)
travel_time_core/: .gitignore  README.md  pyproject.toml
travel_time_core/config/: settings.yml
travel_time_core/src/travel_times/: __init__.py  candidates.py  cli.py  config.py  data_loading.py  db.py  distance.py  export.py  geocode.py  ign_client.py  io_ods.py  logging_utils.py  models.py  pipeline.py  routing_client.py  validation.py
travel_time_core/tests/: test_cache.py  test_candidates.py  test_cli.py  test_config.py  test_data_loading.py  test_db.py  test_distance.py  test_export.py  test_geocode_parser.py  test_ign_client_parser.py  test_io_ods.py  test_pipeline_cli.py
travel_time_core/tests/fixtures/: communes_minimal.csv  config_minimal.yaml
(+28 files in other folders)
