[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-times-core"
version = "0.1.0"
description = "Calcul local de matrices de temps de trajet routier entre communes via ODS, geo.api.gouv.fr et IGN Geoplateforme."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "odfpy>=1.4",
  "pandas>=2.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
travel-times = "travel_times.cli:app"
travel-time-core = "travel_times.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
